parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMILLA
    COMILLASIMPLE
    SALTODELINEA

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statements statement
Rule 2     statements -> statements sentencia
Rule 3     statements -> sentencia
Rule 4     statements -> statement
Rule 5     statement -> asignacion
Rule 6     statement -> COMENTARIOS
Rule 7     asignacion -> ID ASIGNAR expr PUNTOYCOMA
Rule 8     tipodato -> NUMERICO
Rule 9     tipodato -> CARACTER
Rule 10    tipodato -> ESTADO
Rule 11    tipodato -> CADENA
Rule 12    statement -> LEER DOSPUNTOS expr
Rule 13    statement -> IMPRIMIR DOSPUNTOS expr PUNTOYCOMA
Rule 14    expr -> ID
Rule 15    expr -> NUMERICO
Rule 16    expr -> CADENA
Rule 17    expr -> CARACTER
Rule 18    expr -> ESTADO
Rule 19    expr -> expr MAS expr
Rule 20    expr -> expr MULTIPLICAR expr
Rule 21    expr -> expr DIVIDIR expr
Rule 22    expr -> expr MENOS expr
Rule 23    expr -> LPAREN expr RPAREN
Rule 24    condiciones -> MENOR
Rule 25    condiciones -> MENORIGUAL
Rule 26    condiciones -> MAYOR
Rule 27    condiciones -> MAYORIGUAL
Rule 28    condiciones -> ASIGNAR
Rule 29    condiciones -> IGUALDAD
Rule 30    condiciones -> DISTINTO
Rule 31    condicion -> expr condiciones expr
Rule 32    sentencia_si -> SI LPAREN condicion RPAREN LBLOCK lista_sentencia RBLOCK
Rule 33    sentencia_si -> SI LPAREN condicion RPAREN LBLOCK lista_sentencia RBLOCK NO LBLOCK lista_sentencia RBLOCK
Rule 34    sentencia_mientras -> MIENTRAS LPAREN condicion RPAREN LBLOCK lista_sentencia RBLOCK
Rule 35    sentencia_mientras -> HAZ LBLOCK lista_sentencia RBLOCK MIENTRAS LPAREN condicion RPAREN PUNTOYCOMA
Rule 36    sentencia_para -> PARA LPAREN asignacion condicion PUNTOYCOMA asignacion RPAREN LBLOCK lista_sentencia RBLOCK
Rule 37    sentencia -> sentencia_si
Rule 38    sentencia -> sentencia_mientras
Rule 39    sentencia -> sentencia_para
Rule 40    sentencia -> statement
Rule 41    lista_sentencia -> lista_sentencia sentencia
Rule 42    lista_sentencia -> sentencia

Terminals, with rules where they appear

ASIGNAR              : 7 28
CADENA               : 11 16
CARACTER             : 9 17
COMENTARIOS          : 6
COMILLA              : 
COMILLASIMPLE        : 
DISTINTO             : 30
DIVIDIR              : 21
DOSPUNTOS            : 12 13
ESTADO               : 10 18
HAZ                  : 35
ID                   : 7 14
IGUALDAD             : 29
IMPRIMIR             : 13
LBLOCK               : 32 33 33 34 35 36
LEER                 : 12
LPAREN               : 23 32 33 34 35 36
MAS                  : 19
MAYOR                : 26
MAYORIGUAL           : 27
MENOR                : 24
MENORIGUAL           : 25
MENOS                : 22
MIENTRAS             : 34 35
MULTIPLICAR          : 20
NO                   : 33
NUMERICO             : 8 15
PARA                 : 36
PUNTOYCOMA           : 7 13 35 36
RBLOCK               : 32 33 33 34 35 36
RPAREN               : 23 32 33 34 35 36
SALTODELINEA         : 
SI                   : 32 33
error                : 

Nonterminals, with rules where they appear

asignacion           : 5 36 36
condicion            : 32 33 34 35 36
condiciones          : 31
expr                 : 7 12 13 19 19 20 20 21 21 22 22 23 31 31
lista_sentencia      : 32 33 33 34 35 36 41
sentencia            : 2 3 41 42
sentencia_mientras   : 38
sentencia_para       : 39
sentencia_si         : 37
statement            : 1 4 40
statements           : 1 2 0
tipodato             : 

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statements statement
    (2) statements -> . statements sentencia
    (3) statements -> . sentencia
    (4) statements -> . statement
    (37) sentencia -> . sentencia_si
    (38) sentencia -> . sentencia_mientras
    (39) sentencia -> . sentencia_para
    (40) sentencia -> . statement
    (5) statement -> . asignacion
    (6) statement -> . COMENTARIOS
    (12) statement -> . LEER DOSPUNTOS expr
    (13) statement -> . IMPRIMIR DOSPUNTOS expr PUNTOYCOMA
    (32) sentencia_si -> . SI LPAREN condicion RPAREN LBLOCK lista_sentencia RBLOCK
    (33) sentencia_si -> . SI LPAREN condicion RPAREN LBLOCK lista_sentencia RBLOCK NO LBLOCK lista_sentencia RBLOCK
    (34) sentencia_mientras -> . MIENTRAS LPAREN condicion RPAREN LBLOCK lista_sentencia RBLOCK
    (35) sentencia_mientras -> . HAZ LBLOCK lista_sentencia RBLOCK MIENTRAS LPAREN condicion RPAREN PUNTOYCOMA
    (36) sentencia_para -> . PARA LPAREN asignacion condicion PUNTOYCOMA asignacion RPAREN LBLOCK lista_sentencia RBLOCK
    (7) asignacion -> . ID ASIGNAR expr PUNTOYCOMA

    COMENTARIOS     shift and go to state 8
    LEER            shift and go to state 9
    IMPRIMIR        shift and go to state 10
    SI              shift and go to state 11
    MIENTRAS        shift and go to state 12
    HAZ             shift and go to state 13
    PARA            shift and go to state 14
    ID              shift and go to state 15

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    sentencia                      shift and go to state 3
    sentencia_si                   shift and go to state 4
    sentencia_mientras             shift and go to state 5
    sentencia_para                 shift and go to state 6
    asignacion                     shift and go to state 7

state 1

    (0) S' -> statements .
    (1) statements -> statements . statement
    (2) statements -> statements . sentencia
    (5) statement -> . asignacion
    (6) statement -> . COMENTARIOS
    (12) statement -> . LEER DOSPUNTOS expr
    (13) statement -> . IMPRIMIR DOSPUNTOS expr PUNTOYCOMA
    (37) sentencia -> . sentencia_si
    (38) sentencia -> . sentencia_mientras
    (39) sentencia -> . sentencia_para
    (40) sentencia -> . statement
    (7) asignacion -> . ID ASIGNAR expr PUNTOYCOMA
    (32) sentencia_si -> . SI LPAREN condicion RPAREN LBLOCK lista_sentencia RBLOCK
    (33) sentencia_si -> . SI LPAREN condicion RPAREN LBLOCK lista_sentencia RBLOCK NO LBLOCK lista_sentencia RBLOCK
    (34) sentencia_mientras -> . MIENTRAS LPAREN condicion RPAREN LBLOCK lista_sentencia RBLOCK
    (35) sentencia_mientras -> . HAZ LBLOCK lista_sentencia RBLOCK MIENTRAS LPAREN condicion RPAREN PUNTOYCOMA
    (36) sentencia_para -> . PARA LPAREN asignacion condicion PUNTOYCOMA asignacion RPAREN LBLOCK lista_sentencia RBLOCK

    COMENTARIOS     shift and go to state 8
    LEER            shift and go to state 9
    IMPRIMIR        shift and go to state 10
    ID              shift and go to state 15
    SI              shift and go to state 11
    MIENTRAS        shift and go to state 12
    HAZ             shift and go to state 13
    PARA            shift and go to state 14

    statement                      shift and go to state 16
    sentencia                      shift and go to state 17
    asignacion                     shift and go to state 7
    sentencia_si                   shift and go to state 4
    sentencia_mientras             shift and go to state 5
    sentencia_para                 shift and go to state 6

state 2

    (4) statements -> statement .
    (40) sentencia -> statement .

  ! reduce/reduce conflict for COMENTARIOS resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for LEER resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for IMPRIMIR resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for ID resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for SI resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for MIENTRAS resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for HAZ resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for PARA resolved using rule 4 (statements -> statement .)
  ! reduce/reduce conflict for $end resolved using rule 4 (statements -> statement .)
    COMENTARIOS     reduce using rule 4 (statements -> statement .)
    LEER            reduce using rule 4 (statements -> statement .)
    IMPRIMIR        reduce using rule 4 (statements -> statement .)
    ID              reduce using rule 4 (statements -> statement .)
    SI              reduce using rule 4 (statements -> statement .)
    MIENTRAS        reduce using rule 4 (statements -> statement .)
    HAZ             reduce using rule 4 (statements -> statement .)
    PARA            reduce using rule 4 (statements -> statement .)
    $end            reduce using rule 4 (statements -> statement .)

  ! COMENTARIOS     [ reduce using rule 40 (sentencia -> statement .) ]
  ! LEER            [ reduce using rule 40 (sentencia -> statement .) ]
  ! IMPRIMIR        [ reduce using rule 40 (sentencia -> statement .) ]
  ! ID              [ reduce using rule 40 (sentencia -> statement .) ]
  ! SI              [ reduce using rule 40 (sentencia -> statement .) ]
  ! MIENTRAS        [ reduce using rule 40 (sentencia -> statement .) ]
  ! HAZ             [ reduce using rule 40 (sentencia -> statement .) ]
  ! PARA            [ reduce using rule 40 (sentencia -> statement .) ]
  ! $end            [ reduce using rule 40 (sentencia -> statement .) ]


state 3

    (3) statements -> sentencia .

    COMENTARIOS     reduce using rule 3 (statements -> sentencia .)
    LEER            reduce using rule 3 (statements -> sentencia .)
    IMPRIMIR        reduce using rule 3 (statements -> sentencia .)
    ID              reduce using rule 3 (statements -> sentencia .)
    SI              reduce using rule 3 (statements -> sentencia .)
    MIENTRAS        reduce using rule 3 (statements -> sentencia .)
    HAZ             reduce using rule 3 (statements -> sentencia .)
    PARA            reduce using rule 3 (statements -> sentencia .)
    $end            reduce using rule 3 (statements -> sentencia .)


state 4

    (37) sentencia -> sentencia_si .

    COMENTARIOS     reduce using rule 37 (sentencia -> sentencia_si .)
    LEER            reduce using rule 37 (sentencia -> sentencia_si .)
    IMPRIMIR        reduce using rule 37 (sentencia -> sentencia_si .)
    ID              reduce using rule 37 (sentencia -> sentencia_si .)
    SI              reduce using rule 37 (sentencia -> sentencia_si .)
    MIENTRAS        reduce using rule 37 (sentencia -> sentencia_si .)
    HAZ             reduce using rule 37 (sentencia -> sentencia_si .)
    PARA            reduce using rule 37 (sentencia -> sentencia_si .)
    $end            reduce using rule 37 (sentencia -> sentencia_si .)
    RBLOCK          reduce using rule 37 (sentencia -> sentencia_si .)


state 5

    (38) sentencia -> sentencia_mientras .

    COMENTARIOS     reduce using rule 38 (sentencia -> sentencia_mientras .)
    LEER            reduce using rule 38 (sentencia -> sentencia_mientras .)
    IMPRIMIR        reduce using rule 38 (sentencia -> sentencia_mientras .)
    ID              reduce using rule 38 (sentencia -> sentencia_mientras .)
    SI              reduce using rule 38 (sentencia -> sentencia_mientras .)
    MIENTRAS        reduce using rule 38 (sentencia -> sentencia_mientras .)
    HAZ             reduce using rule 38 (sentencia -> sentencia_mientras .)
    PARA            reduce using rule 38 (sentencia -> sentencia_mientras .)
    $end            reduce using rule 38 (sentencia -> sentencia_mientras .)
    RBLOCK          reduce using rule 38 (sentencia -> sentencia_mientras .)


state 6

    (39) sentencia -> sentencia_para .

    COMENTARIOS     reduce using rule 39 (sentencia -> sentencia_para .)
    LEER            reduce using rule 39 (sentencia -> sentencia_para .)
    IMPRIMIR        reduce using rule 39 (sentencia -> sentencia_para .)
    ID              reduce using rule 39 (sentencia -> sentencia_para .)
    SI              reduce using rule 39 (sentencia -> sentencia_para .)
    MIENTRAS        reduce using rule 39 (sentencia -> sentencia_para .)
    HAZ             reduce using rule 39 (sentencia -> sentencia_para .)
    PARA            reduce using rule 39 (sentencia -> sentencia_para .)
    $end            reduce using rule 39 (sentencia -> sentencia_para .)
    RBLOCK          reduce using rule 39 (sentencia -> sentencia_para .)


state 7

    (5) statement -> asignacion .

    COMENTARIOS     reduce using rule 5 (statement -> asignacion .)
    LEER            reduce using rule 5 (statement -> asignacion .)
    IMPRIMIR        reduce using rule 5 (statement -> asignacion .)
    ID              reduce using rule 5 (statement -> asignacion .)
    SI              reduce using rule 5 (statement -> asignacion .)
    MIENTRAS        reduce using rule 5 (statement -> asignacion .)
    HAZ             reduce using rule 5 (statement -> asignacion .)
    PARA            reduce using rule 5 (statement -> asignacion .)
    $end            reduce using rule 5 (statement -> asignacion .)
    RBLOCK          reduce using rule 5 (statement -> asignacion .)


state 8

    (6) statement -> COMENTARIOS .

    COMENTARIOS     reduce using rule 6 (statement -> COMENTARIOS .)
    LEER            reduce using rule 6 (statement -> COMENTARIOS .)
    IMPRIMIR        reduce using rule 6 (statement -> COMENTARIOS .)
    ID              reduce using rule 6 (statement -> COMENTARIOS .)
    SI              reduce using rule 6 (statement -> COMENTARIOS .)
    MIENTRAS        reduce using rule 6 (statement -> COMENTARIOS .)
    HAZ             reduce using rule 6 (statement -> COMENTARIOS .)
    PARA            reduce using rule 6 (statement -> COMENTARIOS .)
    $end            reduce using rule 6 (statement -> COMENTARIOS .)
    RBLOCK          reduce using rule 6 (statement -> COMENTARIOS .)


state 9

    (12) statement -> LEER . DOSPUNTOS expr

    DOSPUNTOS       shift and go to state 18


state 10

    (13) statement -> IMPRIMIR . DOSPUNTOS expr PUNTOYCOMA

    DOSPUNTOS       shift and go to state 19


state 11

    (32) sentencia_si -> SI . LPAREN condicion RPAREN LBLOCK lista_sentencia RBLOCK
    (33) sentencia_si -> SI . LPAREN condicion RPAREN LBLOCK lista_sentencia RBLOCK NO LBLOCK lista_sentencia RBLOCK

    LPAREN          shift and go to state 20


state 12

    (34) sentencia_mientras -> MIENTRAS . LPAREN condicion RPAREN LBLOCK lista_sentencia RBLOCK

    LPAREN          shift and go to state 21


state 13

    (35) sentencia_mientras -> HAZ . LBLOCK lista_sentencia RBLOCK MIENTRAS LPAREN condicion RPAREN PUNTOYCOMA

    LBLOCK          shift and go to state 22


state 14

    (36) sentencia_para -> PARA . LPAREN asignacion condicion PUNTOYCOMA asignacion RPAREN LBLOCK lista_sentencia RBLOCK

    LPAREN          shift and go to state 23


state 15

    (7) asignacion -> ID . ASIGNAR expr PUNTOYCOMA

    ASIGNAR         shift and go to state 24


state 16

    (1) statements -> statements statement .
    (40) sentencia -> statement .

  ! reduce/reduce conflict for COMENTARIOS resolved using rule 1 (statements -> statements statement .)
  ! reduce/reduce conflict for LEER resolved using rule 1 (statements -> statements statement .)
  ! reduce/reduce conflict for IMPRIMIR resolved using rule 1 (statements -> statements statement .)
  ! reduce/reduce conflict for ID resolved using rule 1 (statements -> statements statement .)
  ! reduce/reduce conflict for SI resolved using rule 1 (statements -> statements statement .)
  ! reduce/reduce conflict for MIENTRAS resolved using rule 1 (statements -> statements statement .)
  ! reduce/reduce conflict for HAZ resolved using rule 1 (statements -> statements statement .)
  ! reduce/reduce conflict for PARA resolved using rule 1 (statements -> statements statement .)
  ! reduce/reduce conflict for $end resolved using rule 1 (statements -> statements statement .)
    COMENTARIOS     reduce using rule 1 (statements -> statements statement .)
    LEER            reduce using rule 1 (statements -> statements statement .)
    IMPRIMIR        reduce using rule 1 (statements -> statements statement .)
    ID              reduce using rule 1 (statements -> statements statement .)
    SI              reduce using rule 1 (statements -> statements statement .)
    MIENTRAS        reduce using rule 1 (statements -> statements statement .)
    HAZ             reduce using rule 1 (statements -> statements statement .)
    PARA            reduce using rule 1 (statements -> statements statement .)
    $end            reduce using rule 1 (statements -> statements statement .)

  ! COMENTARIOS     [ reduce using rule 40 (sentencia -> statement .) ]
  ! LEER            [ reduce using rule 40 (sentencia -> statement .) ]
  ! IMPRIMIR        [ reduce using rule 40 (sentencia -> statement .) ]
  ! ID              [ reduce using rule 40 (sentencia -> statement .) ]
  ! SI              [ reduce using rule 40 (sentencia -> statement .) ]
  ! MIENTRAS        [ reduce using rule 40 (sentencia -> statement .) ]
  ! HAZ             [ reduce using rule 40 (sentencia -> statement .) ]
  ! PARA            [ reduce using rule 40 (sentencia -> statement .) ]
  ! $end            [ reduce using rule 40 (sentencia -> statement .) ]


state 17

    (2) statements -> statements sentencia .

    COMENTARIOS     reduce using rule 2 (statements -> statements sentencia .)
    LEER            reduce using rule 2 (statements -> statements sentencia .)
    IMPRIMIR        reduce using rule 2 (statements -> statements sentencia .)
    ID              reduce using rule 2 (statements -> statements sentencia .)
    SI              reduce using rule 2 (statements -> statements sentencia .)
    MIENTRAS        reduce using rule 2 (statements -> statements sentencia .)
    HAZ             reduce using rule 2 (statements -> statements sentencia .)
    PARA            reduce using rule 2 (statements -> statements sentencia .)
    $end            reduce using rule 2 (statements -> statements sentencia .)


state 18

    (12) statement -> LEER DOSPUNTOS . expr
    (14) expr -> . ID
    (15) expr -> . NUMERICO
    (16) expr -> . CADENA
    (17) expr -> . CARACTER
    (18) expr -> . ESTADO
    (19) expr -> . expr MAS expr
    (20) expr -> . expr MULTIPLICAR expr
    (21) expr -> . expr DIVIDIR expr
    (22) expr -> . expr MENOS expr
    (23) expr -> . LPAREN expr RPAREN

    ID              shift and go to state 26
    NUMERICO        shift and go to state 27
    CADENA          shift and go to state 28
    CARACTER        shift and go to state 29
    ESTADO          shift and go to state 30
    LPAREN          shift and go to state 31

    expr                           shift and go to state 25

state 19

    (13) statement -> IMPRIMIR DOSPUNTOS . expr PUNTOYCOMA
    (14) expr -> . ID
    (15) expr -> . NUMERICO
    (16) expr -> . CADENA
    (17) expr -> . CARACTER
    (18) expr -> . ESTADO
    (19) expr -> . expr MAS expr
    (20) expr -> . expr MULTIPLICAR expr
    (21) expr -> . expr DIVIDIR expr
    (22) expr -> . expr MENOS expr
    (23) expr -> . LPAREN expr RPAREN

    ID              shift and go to state 26
    NUMERICO        shift and go to state 27
    CADENA          shift and go to state 28
    CARACTER        shift and go to state 29
    ESTADO          shift and go to state 30
    LPAREN          shift and go to state 31

    expr                           shift and go to state 32

state 20

    (32) sentencia_si -> SI LPAREN . condicion RPAREN LBLOCK lista_sentencia RBLOCK
    (33) sentencia_si -> SI LPAREN . condicion RPAREN LBLOCK lista_sentencia RBLOCK NO LBLOCK lista_sentencia RBLOCK
    (31) condicion -> . expr condiciones expr
    (14) expr -> . ID
    (15) expr -> . NUMERICO
    (16) expr -> . CADENA
    (17) expr -> . CARACTER
    (18) expr -> . ESTADO
    (19) expr -> . expr MAS expr
    (20) expr -> . expr MULTIPLICAR expr
    (21) expr -> . expr DIVIDIR expr
    (22) expr -> . expr MENOS expr
    (23) expr -> . LPAREN expr RPAREN

    ID              shift and go to state 26
    NUMERICO        shift and go to state 27
    CADENA          shift and go to state 28
    CARACTER        shift and go to state 29
    ESTADO          shift and go to state 30
    LPAREN          shift and go to state 31

    condicion                      shift and go to state 33
    expr                           shift and go to state 34

state 21

    (34) sentencia_mientras -> MIENTRAS LPAREN . condicion RPAREN LBLOCK lista_sentencia RBLOCK
    (31) condicion -> . expr condiciones expr
    (14) expr -> . ID
    (15) expr -> . NUMERICO
    (16) expr -> . CADENA
    (17) expr -> . CARACTER
    (18) expr -> . ESTADO
    (19) expr -> . expr MAS expr
    (20) expr -> . expr MULTIPLICAR expr
    (21) expr -> . expr DIVIDIR expr
    (22) expr -> . expr MENOS expr
    (23) expr -> . LPAREN expr RPAREN

    ID              shift and go to state 26
    NUMERICO        shift and go to state 27
    CADENA          shift and go to state 28
    CARACTER        shift and go to state 29
    ESTADO          shift and go to state 30
    LPAREN          shift and go to state 31

    condicion                      shift and go to state 35
    expr                           shift and go to state 34

state 22

    (35) sentencia_mientras -> HAZ LBLOCK . lista_sentencia RBLOCK MIENTRAS LPAREN condicion RPAREN PUNTOYCOMA
    (41) lista_sentencia -> . lista_sentencia sentencia
    (42) lista_sentencia -> . sentencia
    (37) sentencia -> . sentencia_si
    (38) sentencia -> . sentencia_mientras
    (39) sentencia -> . sentencia_para
    (40) sentencia -> . statement
    (32) sentencia_si -> . SI LPAREN condicion RPAREN LBLOCK lista_sentencia RBLOCK
    (33) sentencia_si -> . SI LPAREN condicion RPAREN LBLOCK lista_sentencia RBLOCK NO LBLOCK lista_sentencia RBLOCK
    (34) sentencia_mientras -> . MIENTRAS LPAREN condicion RPAREN LBLOCK lista_sentencia RBLOCK
    (35) sentencia_mientras -> . HAZ LBLOCK lista_sentencia RBLOCK MIENTRAS LPAREN condicion RPAREN PUNTOYCOMA
    (36) sentencia_para -> . PARA LPAREN asignacion condicion PUNTOYCOMA asignacion RPAREN LBLOCK lista_sentencia RBLOCK
    (5) statement -> . asignacion
    (6) statement -> . COMENTARIOS
    (12) statement -> . LEER DOSPUNTOS expr
    (13) statement -> . IMPRIMIR DOSPUNTOS expr PUNTOYCOMA
    (7) asignacion -> . ID ASIGNAR expr PUNTOYCOMA

    SI              shift and go to state 11
    MIENTRAS        shift and go to state 12
    HAZ             shift and go to state 13
    PARA            shift and go to state 14
    COMENTARIOS     shift and go to state 8
    LEER            shift and go to state 9
    IMPRIMIR        shift and go to state 10
    ID              shift and go to state 15

    lista_sentencia                shift and go to state 36
    sentencia                      shift and go to state 37
    sentencia_si                   shift and go to state 4
    sentencia_mientras             shift and go to state 5
    sentencia_para                 shift and go to state 6
    statement                      shift and go to state 38
    asignacion                     shift and go to state 7

state 23

    (36) sentencia_para -> PARA LPAREN . asignacion condicion PUNTOYCOMA asignacion RPAREN LBLOCK lista_sentencia RBLOCK
    (7) asignacion -> . ID ASIGNAR expr PUNTOYCOMA

    ID              shift and go to state 15

    asignacion                     shift and go to state 39

state 24

    (7) asignacion -> ID ASIGNAR . expr PUNTOYCOMA
    (14) expr -> . ID
    (15) expr -> . NUMERICO
    (16) expr -> . CADENA
    (17) expr -> . CARACTER
    (18) expr -> . ESTADO
    (19) expr -> . expr MAS expr
    (20) expr -> . expr MULTIPLICAR expr
    (21) expr -> . expr DIVIDIR expr
    (22) expr -> . expr MENOS expr
    (23) expr -> . LPAREN expr RPAREN

    ID              shift and go to state 26
    NUMERICO        shift and go to state 27
    CADENA          shift and go to state 28
    CARACTER        shift and go to state 29
    ESTADO          shift and go to state 30
    LPAREN          shift and go to state 31

    expr                           shift and go to state 40

state 25

    (12) statement -> LEER DOSPUNTOS expr .
    (19) expr -> expr . MAS expr
    (20) expr -> expr . MULTIPLICAR expr
    (21) expr -> expr . DIVIDIR expr
    (22) expr -> expr . MENOS expr

    COMENTARIOS     reduce using rule 12 (statement -> LEER DOSPUNTOS expr .)
    LEER            reduce using rule 12 (statement -> LEER DOSPUNTOS expr .)
    IMPRIMIR        reduce using rule 12 (statement -> LEER DOSPUNTOS expr .)
    ID              reduce using rule 12 (statement -> LEER DOSPUNTOS expr .)
    SI              reduce using rule 12 (statement -> LEER DOSPUNTOS expr .)
    MIENTRAS        reduce using rule 12 (statement -> LEER DOSPUNTOS expr .)
    HAZ             reduce using rule 12 (statement -> LEER DOSPUNTOS expr .)
    PARA            reduce using rule 12 (statement -> LEER DOSPUNTOS expr .)
    $end            reduce using rule 12 (statement -> LEER DOSPUNTOS expr .)
    RBLOCK          reduce using rule 12 (statement -> LEER DOSPUNTOS expr .)
    MAS             shift and go to state 41
    MULTIPLICAR     shift and go to state 42
    DIVIDIR         shift and go to state 43
    MENOS           shift and go to state 44


state 26

    (14) expr -> ID .
